--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
   - openjdk17
 
 install:
-  - mvn -B -DskipTests install
+  - mvn -B -DskipTests -pl jdae-api,jdae-core,jdae-processor,jdae-maven-plugin -am install
