--- a/jdae-core/pom.xml
+++ b/jdae-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>dev.relism</groupId>
         <artifactId>jdae-parent</artifactId>
-        <version>1.0.2</version>
+        <version>v1.0.3</version>
     </parent>
 
     <artifactId>jdae-core</artifactId>
