--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>dev.relism</groupId>
     <artifactId>jdae-parent</artifactId>
-    <version>1.0.2</version>
+    <version>v1.0.3</version>
     <packaging>pom</packaging>
 
     <name>JDAE - Java Dynamic Annotation Expander</name>
