--- a/jdae-api/pom.xml
+++ b/jdae-api/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jdae-api</artifactId>
-    <version>v1.0.3</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>dev.relism</groupId>
         <artifactId>jdae-parent</artifactId>
-        <version>v1.0.3</version>
+        <version>v1.0.5h</version>
     </parent>
 
     <!-- Inherit compiler and encoding settings from parent -->
