--- a/jdae-processor/pom.xml
+++ b/jdae-processor/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>dev.relism</groupId>
         <artifactId>jdae-parent</artifactId>
-        <version>v1.0.3</version>
+        <version>v1.0.5h</version>
     </parent>
 
     <artifactId>jdae-processor</artifactId>
