--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>dev.relism</groupId>
     <artifactId>jdae-parent</artifactId>
-    <version>v1.0.3</version>
+    <version>v1.0.5h</version>
     <packaging>pom</packaging>
 
     <name>JDAE - Java Dynamic Annotation Expander</name>
@@ -22,8 +22,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
         <!-- Dependency versions -->
         <asm.version>9.6</asm.version>
@@ -40,6 +40,17 @@
         <assertj.version>3.24.2</assertj.version>
         <mockito.version>5.7.0</mockito.version>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>reposilite</id>
+            <url>https://maven.relism.dev/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>reposilite</id>
+            <url>https://maven.relism.dev/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -152,8 +163,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <source>17</source>
-                        <target>17</target>
+                        <source>21</source>
+                        <target>21</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
